# teams-status-change-notification

./: .gitignore  Cargo.toml  LICENSE  README.md  menubar_teams.10s.py  setup_bark.sh
extension/: background.js  manifest.json  popup.html  popup.js
src/: bark_notify_fix.rs  main.rs
