[package]
name = "teams-notifier"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
home = "0.5"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
urlencoding = "2.1.3"

